syntax = "proto3";
package order;

option go_package = "../order";

message Order {
    message OrderProduct {
        string id = 1;
        string name = 2;
        string description = 3;
        double price = 4;
        uint32 quantity = 5;
    }

    string id = 1;
    string accountId = 2;
    string timestamp = 3;
    double totalPrice = 4;
    repeated OrderProduct products = 5;
}

message CreateOrderRequest {
    message OrderProduct {
        string productId = 2;
        uint32 quantity = 5;
    }

    string accountId = 1;
    repeated OrderProduct products = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message GetOrderByAccountIDRequest{
    string accountId = 1;
}

message GetOrderByAccountIDResponse{
    repeated Order order = 1;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
    rpc GetOrderByAccountID (GetOrderByAccountIDRequest) returns (GetOrderByAccountIDResponse) {}
}
